--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,14 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  name        : "Marin Bertran"
+  uri         : "http://martinbertran.github.io"
+  email       : "martin.a.bertran@gmail.com"
+  bio         : "Applied scientist at AWS. My work spans fairness, privacy,
+    information‑theoretic learning, and large‑scale LLM evaluation."
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
-  google_plus : "Name"
+  googlescholar: "https://scholar.google.com/citations?user=1kki_voAAAAJ"
+  github: 'MartinBertran'
+  
 
-Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
