modified profile images

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ repository               : "MartinBertran/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "/images/profile.jpg"
   name             : "Martin Bertran"
   pronouns         : "he/him"
   bio              : "Applied scientist at AWS."
