--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,6 @@
 locale                   : "en-US"
 site_theme               : "default"
 title                    : "Martin Bertran"
-tagline                  : "Fairness * Privacy * Calibration"
 title_separator          : "-"
 name                     : &name "Martin Bertran"
 description              : &description ">-
@@ -18,14 +17,14 @@ description              : &description ">-
   machine‑learning systems. Opinions are my own."
 url                      : https://martinbertran.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "MartinBertran/academicpages.github.io"
+repository               : "martinbertran/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/profile.jpg"
+  avatar           : "profile.jpg"
   name             : "Martin Bertran"
   pronouns         : "he/him"
   bio              : "Applied scientist at AWS."
@@ -80,13 +79,16 @@ author:
   # zhihu            : # Username
 
 # Publication Category - The following the list of publication categories and their headings
-publication_category:
-  books:
-    title: 'Books'
-  manuscripts:
-    title: 'Journal Articles'    
-  conferences:
-    title: 'Conference Papers'
+# publication_category:
+#   books:
+#     title: 'Books'
+#   manuscripts:
+#     title: 'Conference Papers'    
+#   conferences:
+#     title: 'Conference Papers'
+#   journal:
+#     title: "Conference Papers"
+#     output: true
 
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
